@@ -1,3 +1,9 @@
+2015-01-05  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32proc.c, w32.h, w32fns.c, w32font.c, w32menu.c, w32notify.c:
+	* w32proc.c, w32select.c, w32term.c, w32uniscribe.c: Remove
+	declarations of Q* variables that represent symbols.
+
 2015-01-05  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Use 0 for Qnil
